apparantly the offscreen canvas 'active' class can be triggered in desktop mode, with eg. Ctrl-F. Make sure desktop media query rules handle this.

--- a/ferenda/res/css/ferenda.css
+++ b/ferenda/res/css/ferenda.css
@@ -204,11 +204,18 @@ nav[data-toggle='toc'].affix {
 	width: 25%;
 	border: none;
     }
+    .row-offcanvas-left.active {
+	left: 0;
+    }
     .row-offcanvas-left .sidebar-offcanvas .slidebutton {
 	display: none;
     }
     .row-offcanvas-left article {
 	width: 75%;
+    }
+    .row-offcanvas-left.active article {
+	width: 75%;
+	margin-left: 0;
     }
 }
 /* end offscreen canvas */
